--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://7421c54b-d9c0-43f9-81c2-7f9d477b2a9e.preview.emergentagent.com
 WDS_SOCKET_PORT=443
